// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FixRecord form submission payload should submit fix record data 1`] = `"{"issue":"Added comments: \\n          my comments"}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 1`] = `"{"issue":"Added comments: \\n          my comments \\n\\n                Added files: \\n          test.png \\n\\n        Selected Content Indicator(s): \\n          Case Study"}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 2`] = `"{"rek_pid":"UQ:41878","fez_record_search_key_file_attachment_name":[{"rek_file_attachment_name":"test.png","rek_file_attachment_name_order":1}],"fez_record_search_key_file_attachment_embargo_date":[],"fez_record_search_key_file_attachment_access_condition":[{"rek_file_attachment_access_condition":1,"rek_file_attachment_access_condition_order":1}],"fez_record_search_key_file_attachment_security_policy":[],"fez_record_search_key_content_indicator":[{"rek_content_indicator":454079,"rek_content_indicator_order":1},{"rek_content_indicator":454080,"rek_content_indicator_order":2},{"rek_content_indicator":454081,"rek_content_indicator_order":3}]}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 3`] = `
File {
  "path": "test.png",
}
`;

exports[`Component FixRecord form submission payload should submit unclaim data 1`] = `"{"rek_pid":"UQ:41878","fez_record_search_key_author_id":[{"rek_author_id_pid":"UQ:41878","rek_author_id":0,"rek_author_id_order":1},{"rek_author_id":0,"rek_author_id_order":2},{"rek_author_id_pid":"UQ:41878","rek_author_id":786,"rek_author_id_order":3},{"rek_author_id_pid":"UQ:41878","rek_author_id":687,"rek_author_id_order":4},{"rek_author_id_pid":"UQ:41878","rek_author_id":4100,"rek_author_id_order":5}],"fez_record_search_key_contributor_id":[]}"`;

exports[`Component FixRecord form submission payload should submit unclaim data 2`] = `"{"pid":"UQ:41878","type":"H"}"`;

exports[`Component FixRecord should render fix record form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                data-discover="true"
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-controls="<dynamic>"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-7qz7dl-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when author is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-u4ps4u-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-1q4fwm5-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when record is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-u4ps4u-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-1q4fwm5-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-5os2wf-MuiGrid-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render record citation, two actions in select field and a cancel button 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                data-discover="true"
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-controls="<dynamic>"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-7qz7dl-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render unclaim form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-nleb5q-MuiTypography-root"
                            >
                              <a
                                data-discover="true"
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1ixyqi5-MuiGrid-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
                            >
                              <div
                                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1lugyxr-MuiGrid-root"
                              >
                                <div
                                  class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
                                >
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                                  />
                                  <div
                                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-j9fe35-MuiGrid-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-imddhh-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="true"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-controls="<dynamic>"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      I am not the author/editor/contributor of this work - I would like this work removed from my profile
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value="unclaim"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-remove-this-work-from-my-profile"
              id="standard-card-remove-this-work-from-my-profile"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-remove-this-work-from-my-profile-header"
                    id="standard-card-remove-this-work-from-my-profile-header"
                  >
                    Remove this work from my profile
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-remove-this-work-from-my-profile-content"
                data-testid="standard-card-remove-this-work-from-my-profile-content"
                id="standard-card-remove-this-work-from-my-profile-content"
              >
                <div
                  data-testid="alert"
                  style="margin-top: 5px;"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container css-17z5iqr-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                            data-testid="WarningIcon"
                            focusable="false"
                            id="warning-icon"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                        >
                          <b>
                            WARNING - 
                          </b>
                          <span
                            data-testid="alert-message"
                          >
                            You are about to remove this work from your eSpace profile.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="MuiBox-root css-0"
                  data-testid="confirmDialogBox"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-7qz7dl-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="fixSubmit"
              data-testid="fix-submit"
              id="fixSubmit"
              tabindex="0"
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
